# pbdt

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  conanfile.txt  vcpkg.json
.github/workflows/: ci-cmake.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  dev-stage-test-result.yml
.github/workflows/ci-cmake/: action.yml
cmake/: conan.cmake  header-module-test.cmake  install-config.cmake  package-manager-toolchain.cmake
docs/: constraints.md  prompt.md
example/: CMakeLists.txt
example/include/example/: example-lib.hpp
examples/: CMakeLists.txt
examples/src/: from-incomplete-scenario.cpp  runnable-scenario.cpp
include/pbdt/: bdd.hpp  constraints.hpp  log-info.hpp  module-unit-guard.hpp  test-context.hpp
include/prop-pp/: bdd.hpp  test-context.hpp
src/: bdd.cppm  constraints.cppm  core.cppm  log-info.cppm  test-context.cppm
src/module/: core.cppm
tests/: CMakeLists.txt
tests/example/: CMakeLists.txt
tests/example/src/: example-test.cpp
tests/include/: associative.hpp  composable-callable.hpp  fixtures.hpp  foldable-callable.hpp  for-injection.hpp  given-component-associative-common.hpp  given-component-common.hpp  given-component-idempotent-common.hpp  idempotent.hpp  model.hpp  productable-container.hpp  runnable-combination.hpp  suite-runner.hpp  test-context-common.hpp  then-component-associative-common.hpp  then-component-common.hpp  then-component-idempotent-common.hpp  util.hpp  when-component-associative-common.hpp  when-component-common.hpp  when-component-idempotent-common.hpp
tests/include/generators/: callable-type.hpp  composable-callable.hpp  container-type.hpp  multi-index.hpp  runnable-combination.hpp  runnable-double-combination.hpp  sequence-from-indice.hpp
tests/include/generators/types/: callable-type.hpp  container-type.hpp
tests/include/generators/values/: composable-callable.hpp  event-countable-combination.hpp  event-countable-double-combination.hpp  expectation-context-combination.hpp  foldable-callable.hpp  runnable-combination.hpp  runnable-double-combination.hpp
tests/include/properties/: associative.hpp  homomorphic.hpp  idempotent.hpp  model.hpp  modeling.hpp  projective.hpp  util.hpp
tests/include/properties/classes/: associative.hpp  commutative.hpp  homomorphic.hpp  idempotent.hpp  inclusive.hpp  modeling.hpp  projective.hpp  symmetric.hpp
tests/include/properties/constraints/: inclusive.hpp  mutual-exclusive.hpp
tests/include/wrapped-deps/: for-bdd.hpp  for-constraints.hpp  for-log-info.hpp  for-test-context.hpp
tests/src/: associative-header.cpp  associative-module.cpp  commutative-header.cpp  commutative-module.cpp  composable-callable.cpp  foldable-callable.cpp  given-component-associative-header.cpp  given-component-associative-module.cpp  given-component-idempotent-header.cpp  given-component-idempotent-module.cpp  given-component.cpp  homomorphic-header.cpp  homomorphic-module.cpp  idempotent-header.cpp  idempotent-module.cpp  inclusive-header.cpp  inclusive-module.cpp  modeling-header.cpp  modeling-module.cpp  mutual-exclusive-header.cpp  mutual-exclusive-module.cpp  productable-container.cpp  projective-header.cpp  projective-module.cpp  runnable-combination.cpp  runnable-scenario-header.cpp  runnable-scenario-model-header.cpp  runnable-scenario-model-module.cpp  runnable-scenario-module.cpp  scenario.cpp  symmetric-header.cpp  symmetric-module.cpp  test-context-header.cpp  test-context-module.cpp  test-context.cpp  then-component-associative-header.cpp  then-component-associative-module.cpp  then-component-idempotent-header.cpp  then-component-idempotent-module.cpp  then-component.cpp  (+7 more)
tests/src/instanciation/: composable-callable.cpp  foldable-callable.cpp  productable-container.cpp  runnable-combination.cpp
